# py-api-template

./: .dockerignore  Dockerfile  README.md  dev.py  pyproject.toml
.devcontainer/: devcontainer.json
.devcontainer/hooks/: postCreate.sh
py_api_template/: app.py
src/: app.py
